<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">
    <name>simple_ros2</name>
    <version>0.1.0</version>
    <description>simple code about ros2</description>
    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>
    <license>TODO: License declaration</license>
    <author>Supasan Komonlit</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
