<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>zeabus</name>
    <version>0.5.0</version>
    <description>library for zeabus</description>
    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>
    <license>TODO: License declaration</license>
    <author>Supasan Komonlit</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_generators</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <build_depend>Boost</build_depend>
    <exec_depend>Boost</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
