<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>zeabus_sensor</name>
    <version>0.55.0</version>
    <description>Connection to hardware or sensor</description>
    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>zeabus_serial</build_depend>
    <exec_depend>zeabus_serial</exec_depend>

    <build_depend>rclcpp</build_depend>
    <exec_depend>rclcpp</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
