<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>zeabus_sensor</name>
    <version>0.55.0</version>
    <description>Connection to hardware or sensor</description>
    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>
    <license>TODO: License declaration</license>
    <author>Supasan Komonlit</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>zeabus</build_depend>
    <exec_depend>zeabus</exec_depend>

    <build_depend>rclcpp</build_depend>
    <exec_depend>rclcpp</exec_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
