<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">

    <name>zeabus_serial</name>
    <version>0.5.0</version>
    <description>package for connection to hardware by boost library serial</description>
    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <build_depend>Boost</build_depend>
    <exec_depend>Boost</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
